<resources>
    <string name="app_name">Demo Login with Firebase</string>

    <!-- Social Networks APIs keys
    <string name="google_web_client_id" translatable="false">todo web client id</string>
    <string name="twitter_consumer_api_key" translatable="false">todo consumer api key</string>
    <string name="twitter_consumer_api_secret_key" translatable="false">todo api secret key</string>
    <string name="facebook_app_id" translatable="false">todo api id</string>
    <string name="fb_login_protocol_scheme" translatable="false">todo login protocol scheme</string>
    -->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_not_found">This email not found</string>
    <string name="error_email_not_activated">This email not verified</string>
    <plurals name="symbols">
        <item quantity="one">digit or letter</item>
        <item quantity="other">digits or letters</item>
    </plurals>
    <string name="weak_password_error">Minimal password length - %s</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="error_response_title">Connection error</string>
    <string name="error_response_message">Check network connection and try again</string>
    <string name="password">Password</string>
    <string name="current_email">Email</string>
    <string name="sign_in_action">Sign In</string>
    <string name="sign_up_action">Sign Up</string>
    <string name="sign_up_label_text">Don\'t registered yet?</string>
    <string name="sign_in_with_label">or with social networks</string>
    <string name="forgot_password_button_name">Forgot password?</string>
    <string name="login_validation_error">THis login is too short</string>
    <string name="login_conflict_error">login already exist</string>
    <string name="error_email_in_use">Email already in use</string>
    <string name="error_recent_login_required">Recent login required</string>
    <string name="recovery_subtitle">To recover your password, enter the e-mail address you used during registration. We
        will send your password to this address:
    </string>
    <string name="send">Send</string>
    <string name="recovery_password">Recovery password</string>
    <string name="message_recover_password">An email has been sent to your e-mail with instructions for recovering a
        password
    </string>
    <string name="confirm_password">Confirm Password</string>

    <string name="change_password_subtitle">Type your old, new and confirm passwords in the boxes. Press Submit button to submit changes</string>
    <string name="change_password">Change password</string>
    <string name="message_change_password">Password successfully changed!</string>
    <string name="old_password">Old Password</string>
    <string name="submit">Submit</string>
    <string name="login">Display Name</string>
    <string name="yes">Yes</string>
    <string name="alert_edit_profile_title">Changes not saved!</string>
    <string name="alert_edit_profile_message">Are you sure you want to return? All unsaved changes will be lost</string>
    <string name="cancel">Cancel</string>
    <string name="error_too_many_requests_message">Too many unsuccessful login attempts. Please try again later.</string>
    <string name="error_too_many_requests_title">Error. Account blocked</string>
</resources>
